--- a/Source/PresentacionTesis/Presentacion.tex
+++ b/Source/PresentacionTesis/Presentacion.tex
@@ -1724,12 +1724,12 @@
 			%\begin{tabular}{c c c c c c}
 			\begin{tabular}{c c S[table-number-alignment = center] S[table-number-alignment = center] S[table-number-alignment = center] S[table-number-alignment = center]}
 				%\toprule
-				Color & n &  $\widehat\alpha_{\text{\tiny{MV}}}$ & $\widehat{\alpha_{\Gamma}}$ &$\widehat\alpha_{\text{\tiny{LN}}}$  &$\widehat\alpha_{\text{\tiny{LC}}}$ \\
+				Color & $n$ &  $\widehat\alpha_{\text{\tiny{MV}}}$ & $\widehat{\alpha_{\Gamma}}$ &$\widehat\alpha_{\text{\tiny{LN}}}$  &$\widehat\alpha_{\text{\tiny{LC}}}$ \\
 				\midrule
 				Magenta     & 9   & \color {gray}-20.0   & \color {gray}-20.0  & \color {gray}-20.0   & \color {gray}-20.0    \\
 				Verde       & 30  & -13.04  & -6.82  & \color {red}-7.76   &  -20.0  \\
 				Amarilla    & 72  & -4.72  & -5.09  & \color {red}-7.99    &  -4.29    \\
-				Roja        & 132 & -6.94  & -8.42  & \color {red}8.53     &   -6.79\\
+				Roja        & 132 & -6.94  & -8.42  & \color {red}-8.53     &   -6.79\\
 				%\bottomrule
 			\end{tabular}
 		\end{table}
@@ -1741,7 +1741,7 @@
 			%\begin{tabular}{c c c c c c}
 			\begin{tabular}{c c S[table-number-alignment = center] S[table-number-alignment = center] S[table-number-alignment = center] S[table-number-alignment = center]}
 				%\toprule
-				Color & n &  $\widehat\alpha_{\text{\tiny{MV}}}$ & $\widehat\alpha_{\text{\tiny{DT}}}$ &$\widehat\alpha_{\text{\tiny{Mom12}}}$ & $\widehat\alpha_{\text{\tiny{LC}}}$\\
+				Color & $n$ &  $\widehat\alpha_{\text{\tiny{MV}}}$ & $\widehat\alpha_{\text{\tiny{DT}}}$ &$\widehat\alpha_{\text{\tiny{Mom12}}}$ & $\widehat\alpha_{\text{\tiny{LC}}}$\\
 				\midrule
 				Magenta     & 15  &  0.03 &  1.95     &  0.03  &  0.03 \\
 				Verde       & 30  &  0.00 &  4.04     &  0.00  &  0.00\\
